Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
N/A
-
Not for Release Notes
-
Q4/2025 Server Development, Q1/2026 Server Development, Q1/2026 Server Maintenance
Description
--source include/have_innodb.inc
|
CREATE GLOBAL TEMPORARY TABLE t (c INT) ENGINE=InnoDB ON COMMIT PRESERVE ROWS; |
HANDLER t OPEN; |
HANDLER t READ FIRST; |
Leads to:
|
MDEV-35915-8 CS 12.2.0 c7ea08421d34fa7d45e27919a869ade968bd88c4 (Debug, Clang 21.1.3-20250923) Build 20/10/2025 |
mariadbd: /test/bb-12.2-nikita-global-tmp_dbg/sql/lock.cc:436: int lock_external(THD *, TABLE **, uint): Assertion `(*tables)->reginfo.lock_type >= TL_READ_SKIP_LOCKED' failed.
|
|
MDEV-35915-8 CS 12.2.0 c7ea08421d34fa7d45e27919a869ade968bd88c4 (Debug, Clang 21.1.3-20250923) Build 20/10/2025 |
Core was generated by `/test/MDEV-35915_8_MD201025-mariadb-12.2.0-linux-x86_64-dbg/bin/mariadbd --no-d'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
 |
[Current thread is 1 (LWP 492734)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x000073ea4cc4526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x000073ea4cc288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x000073ea4cc2881b in __assert_fail_base (fmt=0x73ea4cdd01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x584c90d268bf "(*tables)->reginfo.lock_type >= TL_READ_SKIP_LOCKED", file=file@entry=0x584c90db4c3a "/test/bb-12.2-nikita-global-tmp_dbg/sql/lock.cc", line=line@entry=436, function=function@entry=0x584c90d5075d "int lock_external(THD *, TABLE **, uint)") at ./assert/assert.c:94
|
#6 0x000073ea4cc3b507 in __assert_fail (assertion=0x584c90d268bf "(*tables)->reginfo.lock_type >= TL_READ_SKIP_LOCKED", file=0x584c90db4c3a "/test/bb-12.2-nikita-global-tmp_dbg/sql/lock.cc", line=436, function=0x584c90d5075d "int lock_external(THD *, TABLE **, uint)")at ./assert/assert.c:103
|
#7 0x0000584c91557284 in lock_external (thd=0x73e918000d58, tables=0x73e91802c8f8, count=1)at /test/bb-12.2-nikita-global-tmp_dbg/sql/lock.cc:436
|
#8 0x0000584c91556fab in mysql_lock_tables (thd=0x73e918000d58, sql_lock=0x73e91802c8d8, flags=0)at /test/bb-12.2-nikita-global-tmp_dbg/sql/lock.cc:388
|
#9 0x0000584c9191a093 in mysql_ha_read (thd=0x73e918000d58, tables=0x73e918019fd8, mode=RFIRST, keyname=0x0, key_expr=0x0, ha_rkey_mode=HA_READ_KEY_EXACT, cond=0x0, select_limit_cnt=1, offset_limit_cnt=0)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_handler.cc:838
|
#10 0x0000584c91987aa3 in mysql_execute_command (thd=0x73e918000d58, is_called_from_prepared_stmt=false)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_parse.cc:5463
|
#11 0x0000584c9197a538 in mysql_parse (thd=0x73e918000d58, rawbuf=0x73e918019e80 "HANDLER t READ FIRST", length=20, parser_state=0x73ea48bfda10)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_parse.cc:7895
|
#12 0x0000584c91977d19 in dispatch_command (command=COM_QUERY, thd=0x73e918000d58, packet=0x73e91800b1f9 "HANDLER t READ FIRST", packet_length=20, blocking=true)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_parse.cc:1882
|
#13 0x0000584c9197afba in do_command (thd=0x73e918000d58, blocking=true)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_parse.cc:1421
|
#14 0x0000584c91b6d9ee in do_handle_one_connection (connect=0x584c957d53f8, put_in_cache=true)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_connect.cc:1414
|
#15 0x0000584c91b6d7d1 in handle_one_connection (arg=0x584c957e6498)at /test/bb-12.2-nikita-global-tmp_dbg/sql/sql_connect.cc:1326
|
#16 0x000073ea4cc9ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#17 0x000073ea4cd29c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
Attachments
Issue Links
- is caused by
-
MDEV-35915 Implement Global temporary tables
-
- In Testing
-
- relates to
-
MDEV-37956 ASAN heap-use-after-free and SIGSEGV in mysql_ha_close_table on DROP DATABASE
-
- Closed
-